Styling and Basic Heap Manipulation
The interface is now better organized, and using the command 'exibe' displays the heap, the line where the display command was executed and the method that was being used at that moment. Logic.js now has the ability to interpret basic vocabulary: heap (useless for now), new (working, for the current default heap first), del (working), exibe (working), and  assignments (experimental: not yet implemented in heap structure, but tested with a separate vars object). Not all errors are handled accordingly, for now.

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,14 @@
     </head>
     <body>
         <main>
+            <header>Heap Simulator</header>
             <form>
                 <label>Insert Heap File: <input type="file" value="Heap file" id="heap-file"></label>
                 <input type="button" onclick="readFile()" value="Run">
             </form>
+            <output>
+
+            </output>
         </main>
         <aside id="errorMsg">
             
