--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,17 @@
             <header>Heap Simulator</header>
             <form>
                 <label>Insert Heap File: <input type="file" value="Heap file" id="heap-file"></label>
+                <label>Heap Size: <input type="number" onchange="changeHeapSize(this.value)" value="10" max="20" min="1"></label>
                 <input type="button" onclick="readFile()" value="Run">
             </form>
+            <div id="vars">
+                <div class="var">variables</div>
+            </div>
             <output>
 
             </output>
+            <div id="errorMsg"></div>
         </main>
-        <aside id="errorMsg">
-            
-        </aside>
         <script src="logic.js"></script>
     </body>
 </html>
