Adding Assignment Operation
It is now possible to assign variables to point to the same location as other variables.

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
                 <input type="button" onclick="readFile()" value="Run">
             </form>
             <div id="vars">
-                <div class="var">variables</div>
+                <div class="var"><i>variables</i></div>
             </div>
             <output>
 
